5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1692_1105.log
== SUBMITION (2019-05-01 22:47:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Trully"	
else:
	b = "Invalido"
print("Casa:", b)	
-- EXECUTION TIME:
0.140733
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:47:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Trully"	
else:
	b = "Invalido"
print("Casa:", b)	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:48:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	b = "Invalido"
print("Casa:", b)	
-- EXECUTION TIME:
0.214644
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:49:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	b = "Invalido"
print("Casa:", b)	
-- EXECUTION TIME:
0.106103
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:49:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	b = "Brasao invalido"
print("Casa:", b)	
-- EXECUTION TIME:
0.238106
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:49:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	b = "Brasao invalido"
print(b)	
-- EXECUTION TIME:
0.211633
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:49:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	b = "Brasao invalido"
print(b)	
-- EXECUTION TIME:
0.179009
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:49:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	b = "Brasao invalido"
print(b)	
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:49:53) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	b = "Brasao invalido"
print(b)	
-- EXECUTION TIME:
0.16079
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:50:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	b = "Brasao invalido"
print(b)	
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:51:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	print("Brasao invalido")
print("Casa:", b)	
-- EXECUTION TIME:
0.159483
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:51:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	print("Brasao invalido")
print("Casa:", b)	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:51:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	print("Brasao invalido")
print("Casa:", b)	
-- EXECUTION TIME:
0.311366
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:51:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	print("Brasao invalido")
print("Casa:", b)	
-- EXECUTION TIME:
0.152686
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:51:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
else:
	print("Brasao invalido")
print("Casa:", b)	
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:52:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
print("Casa:", b)
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.16383
-- ERROR:
  File "/home/codebench/codes/1692/1105/main.py", line 24
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:52:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Stark"
elif(a=="leao"):
	b = "Lannister"
elif(a=="veado"):
	b = "Baratheon"
elif(a=="dragao"):
	b = "Targaryen"
elif(a=="rosa"):
	b = "Tyrell"
elif(a=="sol"):
	b = "Martell"
elif(a=="lula"):
	b = "Greyjoy"
elif(a=="esfolado"):
	b = "Bolton"	
elif(a=="turta"):
	b = "Tully"	
print("Casa:", b)
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 24
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:53:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Casa: Stark"
elif(a=="leao"):
	b = "Casa: Lannister"
elif(a=="veado"):
	b = "Casa: Baratheon"
elif(a=="dragao"):
	b = "Casa: Targaryen"
elif(a=="rosa"):
	b = "Casa: Tyrell"
elif(a=="sol"):
	b = "Casa: Martell"
elif(a=="lula"):
	b = "Casa: Greyjoy"
elif(a=="esfolado"):
	b = "Casa: Bolton"	
elif(a=="turta"):
	b = "Casa: Tully"
else:
	b = "Brasao invalido"	
print(b)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:53:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = input("Entrada:")
print('Entrada:', a)
if(a=="lobo"):
	b = "Casa: Stark"
elif(a=="leao"):
	b = "Casa: Lannister"
elif(a=="veado"):
	b = "Casa: Baratheon"
elif(a=="dragao"):
	b = "Casa: Targaryen"
elif(a=="rosa"):
	b = "Casa: Tyrell"
elif(a=="sol"):
	b = "Casa: Martell"
elif(a=="lula"):
	b = "Casa: Greyjoy"
elif(a=="esfolado"):
	b = "Casa: Bolton"	
elif(a=="turta"):
	b = "Casa: Tully"
else:
	b = "Brasao invalido"	
print(b)
-- EXECUTION TIME:
0.151768
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
